// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot: 0 1`] = `"A (c = 0)"`;

exports[`snapshot: 1 1`] = `
"B (c = 10)
..A (c = 0)"
`;

exports[`snapshot: 2 1`] = `
"B (c = 10)
..A (c = 0)"
`;

exports[`snapshot: 3 1`] = `
"D (c = 30)
..A (c = 0)
..B (c = 10)
....A (c = 0)
..C (c = 20)
....A (c = 0)
....B (c = 10)
......A (c = 0)"
`;

exports[`snapshot: 4 1`] = `
"B (c = 10)
..A (c = 0)"
`;

exports[`snapshot: 5 1`] = `
"B (c = 10)
..A (c = 0)"
`;

exports[`snapshot: 6 1`] = `"A (c = 0)"`;

exports[`snapshot: 7 1`] = `
"H (c = 70)
..A (c = 0)
..D (c = 30)
....A (c = 0)
....B (c = 10)
......A (c = 0)
....C (c = 20)
......A (c = 0)
......B (c = 10)
........A (c = 0)
..F (c = 50)
....A (c = 0)
....C (c = 20)
......A (c = 0)
......B (c = 10)
........A (c = 0)
....D (c = 30)
......A (c = 0)
......B (c = 10)
........A (c = 0)
......C (c = 20)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
....E (c = 40)
......A (c = 0)
......C (c = 20)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
......D (c = 30)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
........C (c = 20)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
..G (c = 60)
....A (c = 0)
....D (c = 30)
......A (c = 0)
......B (c = 10)
........A (c = 0)
......C (c = 20)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
....E (c = 40)
......A (c = 0)
......C (c = 20)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
......D (c = 30)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
........C (c = 20)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
....F (c = 50)
......A (c = 0)
......C (c = 20)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
......D (c = 30)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
........C (c = 20)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
......E (c = 40)
........A (c = 0)
........C (c = 20)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
........D (c = 30)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
..........C (c = 20)
............A (c = 0)
............B (c = 10)
..............A (c = 0)"
`;

exports[`snapshot: 8 1`] = `
"H (c = 70)
..A (c = 0)
..D (c = 30)
....A (c = 0)
....B (c = 10)
......A (c = 0)
....C (c = 20)
......A (c = 0)
......B (c = 10)
........A (c = 0)
..F (c = 50)
....A (c = 0)
....C (c = 20)
......A (c = 0)
......B (c = 10)
........A (c = 0)
....D (c = 30)
......A (c = 0)
......B (c = 10)
........A (c = 0)
......C (c = 20)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
....E (c = 40)
......A (c = 0)
......C (c = 20)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
......D (c = 30)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
........C (c = 20)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
..G (c = 60)
....A (c = 0)
....D (c = 30)
......A (c = 0)
......B (c = 10)
........A (c = 0)
......C (c = 20)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
....E (c = 40)
......A (c = 0)
......C (c = 20)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
......D (c = 30)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
........C (c = 20)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
....F (c = 50)
......A (c = 0)
......C (c = 20)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
......D (c = 30)
........A (c = 0)
........B (c = 10)
..........A (c = 0)
........C (c = 20)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
......E (c = 40)
........A (c = 0)
........C (c = 20)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
........D (c = 30)
..........A (c = 0)
..........B (c = 10)
............A (c = 0)
..........C (c = 20)
............A (c = 0)
............B (c = 10)
..............A (c = 0)"
`;

exports[`snapshot: 9 1`] = `
"B (c = 10)
..A (c = 0)"
`;

exports[`snapshot: 10 1`] = `
"F (c = 50)
..A (c = 0)
..C (c = 20)
....A (c = 0)
....B (c = 10)
......A (c = 0)
..D (c = 30)
....A (c = 0)
....B (c = 10)
......A (c = 0)
....C (c = 20)
......A (c = 0)
......B (c = 10)
........A (c = 0)
..E (c = 40)
....A (c = 0)
....C (c = 20)
......A (c = 0)
......B (c = 10)
........A (c = 0)
....D (c = 30)
......A (c = 0)
......B (c = 10)
........A (c = 0)
......C (c = 20)
........A (c = 0)
........B (c = 10)
..........A (c = 0)"
`;
